# DevTemplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  Version.h.in
cmake/: Cache.cmake  CodeCoverage.cmake  Colors.cmake  CompilerWarnings.cmake  Dependencies.cmake  Hardening.cmake  Linker.cmake  ProjectOptions.cmake  README.md  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
data/: README.md
docs/: README.md
examples/: README.md
examples/main/: CMakeLists.txt  README.md  main.cpp
include/: README.md  utility.h
src/: CMakeLists.txt  README.md  utility.cpp
tests/: CMakeLists.txt  README.md
tests/unit_tests/: CMakeLists.txt  testConstrain.cpp
